Pecorrendo a lista das teclas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
     <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
     <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio controls>
 
+    <script src="js/main.js"></script>
 </body>
 </html>
